--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "animate.css": "^4.1.1",
+    "axios": "^0.25.0",
+    "fs": "^0.0.1-security",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
