--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
     "fs": "^0.0.1-security",
+    "get-browser-fingerprint": "^2.0.1",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
