--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.25.0",
     "fs": "^0.0.1-security",
     "get-browser-fingerprint": "^2.0.1",
-    "next": "12.0.8",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "^8.3.2"
